--- a/Journal2020/Journal2020/Base.lproj/Main.storyboard
+++ b/Journal2020/Journal2020/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Entry Table View Controller-->
         <scene sceneID="Ogk-TJ-QIS">
             <objects>
                 <tableViewController id="Cr0-zu-CaY" customClass="EntryTableViewController" customModule="Journal2020" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,15 +17,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="entryCell" id="ubs-DM-snf">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="entryCell" textLabel="e1f-JI-1VZ" detailTextLabel="jH1-fY-XKh" style="IBUITableViewCellStyleSubtitle" id="ubs-DM-snf">
+                                <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ubs-DM-snf" id="xdf-Ji-qvU">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e1f-JI-1VZ">
+                                            <rect key="frame" x="20" y="10" width="33" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jH1-fY-XKh">
+                                            <rect key="frame" x="20" y="31.5" width="33" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="1L3-nU-x86" kind="show" id="6hb-QU-xld"/>
+                                    <segue destination="1L3-nU-x86" kind="show" identifier="editEntry" id="6hb-QU-xld"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -34,7 +50,13 @@
                             <outlet property="delegate" destination="Cr0-zu-CaY" id="eEv-Lt-f2I"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="tah-0Y-LPg"/>
+                    <navigationItem key="navigationItem" id="NGw-gh-W1M">
+                        <barButtonItem key="rightBarButtonItem" title="Item" systemItem="add" id="eAZ-kt-boT">
+                            <connections>
+                                <segue destination="1L3-nU-x86" kind="show" identifier="addEntry" id="VfC-ZP-IsG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qaq-ET-l13" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -52,29 +74,61 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="1L3-nU-x86" id="2Tl-5c-cmK"/>
+                                </connections>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oQp-VO-OMW">
-                                <rect key="frame" x="0.0" y="130" width="414" height="732"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oQp-VO-OMW">
+                                <rect key="frame" x="0.0" y="130" width="414" height="702"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <outlet property="delegate" destination="1L3-nU-x86" id="3Tp-yO-Nzg"/>
+                                </connections>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jZF-Az-cRY">
+                                <rect key="frame" x="20" y="832" width="374" height="30"/>
+                                <state key="normal" title="Clear Entry"/>
+                                <connections>
+                                    <action selector="clearEntryClicked:" destination="1L3-nU-x86" eventType="touchUpInside" id="aWl-w5-yUa"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1nz-Rs-4Aq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="oQp-VO-OMW" firstAttribute="top" secondItem="cjC-tw-TjL" secondAttribute="bottom" constant="8" id="39b-eL-yAQ"/>
                             <constraint firstItem="cjC-tw-TjL" firstAttribute="leading" secondItem="oQp-VO-OMW" secondAttribute="leading" id="5iF-sS-5aB"/>
-                            <constraint firstItem="oQp-VO-OMW" firstAttribute="bottom" secondItem="1nz-Rs-4Aq" secondAttribute="bottom" id="6Cy-wy-0GV"/>
+                            <constraint firstItem="oQp-VO-OMW" firstAttribute="bottom" secondItem="1nz-Rs-4Aq" secondAttribute="bottom" constant="-30" id="6Cy-wy-0GV"/>
                             <constraint firstItem="cjC-tw-TjL" firstAttribute="trailing" secondItem="oQp-VO-OMW" secondAttribute="trailing" id="KQc-xb-Hik"/>
                             <constraint firstItem="cjC-tw-TjL" firstAttribute="centerX" secondItem="F67-H1-uRB" secondAttribute="centerX" id="Lm7-FD-ceh"/>
+                            <constraint firstItem="jZF-Az-cRY" firstAttribute="centerX" secondItem="oQp-VO-OMW" secondAttribute="centerX" id="QTD-7H-hKL"/>
+                            <constraint firstItem="jZF-Az-cRY" firstAttribute="leading" secondItem="F67-H1-uRB" secondAttribute="leadingMargin" id="SMu-pm-7EE"/>
+                            <constraint firstItem="jZF-Az-cRY" firstAttribute="top" secondItem="oQp-VO-OMW" secondAttribute="bottom" id="aCw-0R-4dv"/>
                             <constraint firstItem="cjC-tw-TjL" firstAttribute="leading" secondItem="1nz-Rs-4Aq" secondAttribute="leading" id="c8u-X6-L0v"/>
+                            <constraint firstItem="jZF-Az-cRY" firstAttribute="bottom" secondItem="1nz-Rs-4Aq" secondAttribute="bottom" id="w3E-Pp-ycM"/>
                             <constraint firstItem="cjC-tw-TjL" firstAttribute="top" secondItem="1nz-Rs-4Aq" secondAttribute="top" id="wSD-WW-9wq"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="QME-fc-yad"/>
+                    <navigationItem key="navigationItem" id="QME-fc-yad">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="MEa-1t-6wh">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="QEN-5j-RWE">
+                                <rect key="frame" x="302" y="7" width="92" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Save Entry"/>
+                                <connections>
+                                    <action selector="saveEntryClicked:" destination="1L3-nU-x86" eventType="touchUpInside" id="cv1-tC-bHU"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="bodyOutlet" destination="oQp-VO-OMW" id="2P0-A2-TvT"/>
+                        <outlet property="titleOutlet" destination="cjC-tw-TjL" id="ZcB-aI-LUX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xWf-oh-TZB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -97,6 +151,9 @@
             <point key="canvasLocation" x="-1016" y="-110"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="6hb-QU-xld"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
